force-app/main/default/objects/Down_Payment_Source__c.object
<CustomObject>
    <label>Down Payment Source</label>
    <nameField>
        <label>Down Payment Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Down Payment Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>