force-app/main/default/objects/Down_Payment_Source__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Down Payment Sources</relationshipLabel>
    <relationshipName>Down_Payment_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>