force-app/main/default/objects/Down_Payment_Source__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Lookup for reference to down payment</description>
    <inlineHelpText>Asset Lookup for reference to down payment</inlineHelpText>
    <label>Asset</label>
    <referenceTo>LoanApplicantAsset</referenceTo>
    <relationshipLabel>Down Payment Sources</relationshipLabel>
    <relationshipName>Down_Payment_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>