force-app/main/default/objects/Down_Payment_Source__c/fields/FilogixId__c.field-meta.xml
<CustomField>
    <fullName>FilogixId__c</fullName>
    <description>Filogix External ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Filogix External ID</inlineHelpText>
    <label>Filogix ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>