force-app/main/default/objects/Down_Payment_Source__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property Lookup for reference to down payment</description>
    <inlineHelpText>Property Lookup for reference to down payment</inlineHelpText>
    <label>Property</label>
    <referenceTo>LoanApplicationProperty</referenceTo>
    <relationshipLabel>Down Payment Sources</relationshipLabel>
    <relationshipName>Down_Payment_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>