force-app/main/default/objects/Down_Payment_Source__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrowed Against Liquid Assets</fullName>
            </value>
            <value>
                <fullName>Existing Equity</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Personal Cash</fullName>
            </value>
            <value>
                <fullName>RRSP</fullName>
            </value>
            <value>
                <fullName>Sale of Existing Property</fullName>
            </value>
            <value>
                <fullName>Secondary Financing</fullName>
            </value>
            <value>
                <fullName>Sweat Equity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>